Préparation de la version 1.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,44 @@
 {
     "githubPullRequests.ignoredPullRequestBranches": [
         "main"
+    ],
+    "cSpell.words": [
+        "Ajouter",
+        "après",
+        "Autres",
+        "avec",
+        "bereq",
+        "beresp",
+        "celles",
+        "conteneur",
+        "contenu",
+        "d'origine",
+        "dans",
+        "défaut",
+        "Définir",
+        "depuis",
+        "envoyées",
+        "Gérer",
+        "indiquant",
+        "initiale",
+        "l'adresse",
+        "longtemps",
+        "Mettez",
+        "mettre",
+        "mises",
+        "nocache",
+        "paramètre",
+        "présent",
+        "réception",
+        "réponse",
+        "réponses",
+        "requêtes",
+        "retourne",
+        "serveur",
+        "servie",
+        "sont",
+        "statique",
+        "suivre",
+        "supérieur"
     ]
 }
